# MantecaClimateHub

./: .env  .gitignore  API request optimization  Book1 (1).twbx  Book1 (2).twbx  Book1.twbx  DB optimization  EDA_Level_1.sql  MANIFEST.in  Manteca2023.xlsx  README.md  Temperature_EDA_Level1.ipynb  __init__.py  config.yaml  data_cleaning.py  data_loader.py  data_modelling.py  data_uploader.py  db_config.py  db_connection.py  error handling and logging  extraction.py  feature_engineering.py  main.py  manteca_arima_prediction.twbx  manteca_project.twbx  manteca_project_Dashboard1.twbx  manteca_project_Temperature Distribution.twbx  memory optimization  pyproject.toml  requirements.txt  schema_inspector.py  setup.py  table_creator.py  temperature_eda_level1.py  test_data_extraction.py
