[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "manteca-climate-hub"
version = "0.1.0"
description = "Weather analysis and forecasting for Manteca, California"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "pandas>=1.5.0",
    "numpy>=1.21.0",
    "sqlalchemy>=1.4.0",
    "requests>=2.28.0",
    "statsmodels>=0.13.0",
    "matplotlib>=3.5.0",
    "seaborn>=0.12.0",
    "python-dotenv>=0.19.0",
    "pyyaml>=6.0"
]

[project.optional-dependencies]
prophet = ["prophet>=1.1.0"]
arima = ["pmdarima>=2.0.0"]

[tool.setuptools.packages.find]
where = ["src"]
